--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -54,7 +54,7 @@ video {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: #cd9557;
+  background-color: #666666;
   opacity: 0.7;
   z-index: 1;
 }
@@ -189,18 +189,18 @@ video {
     width: 4rem;
   }
   .social-icons ul > li > a:hover {
-    background-color: #002E66;
+    background-color: #B10202;
   }
 }
 
 .btn-secondary {
-  background-color: #cd9557;
-  border-color: #cd9557;
+  background-color: #B10202;
+  border-color: #B10202;
 }
 
 .btn-secondary:active, .btn-secondary:focus, .btn-secondary:hover {
-  background-color: #ba7c37 !important;
-  border-color: #ba7c37 !important;
+  background-color: #850202 !important;
+  border-color: #850202 !important;
 }
 
 .input {
