--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -75,7 +75,7 @@ video {
   width: 100%;
   min-height: 35rem;
   height: 100%;
-  background-color: rgba(0, 46, 102, 0.8);
+  background-color: rgb(102, 102, 102);
   transform: skewY(4deg);
   transform-origin: bottom right;
 }
@@ -152,7 +152,7 @@ video {
 .social-icons ul > li > a {
   display: block;
   color: white;
-  background-color: rgba(0, 46, 102, 0.8);
+  background-color: rgb(102, 102, 102);
   border-radius: 100%;
   font-size: 2rem;
   line-height: 4rem;
